# Shopcore_Backend

./: .gitignore  Cargo.toml  MISSING_FEATURES.md  README.md  content.txt  docker-compose.yml  makefile  product_seed_data.sql  test_graceful_shutdown.sh
migrations/: 001_schema.sql  002_indexes.sql  003_seed_data.sql  004_add_products.sql  005_add_sample_reviews.sql  005_create_password_resets.sql  006_add_weights.sql  007_vendor_order_item.sql  008_inventory_logs.sql  009_low_stock_alert.sql  010_add_shipment_tracking.sql  011_platform_settings.sql  012_add_tax_rate.sql  20260505_add_shipment_tracking.sql
scripts/: init_db.sh  migrate.sh
src/: lib.rs  main.rs
src/app/: mod.rs  router.rs  router.rs.backup  startup.rs  state.rs  state.rs.patch
src/config/: app_config.rs  cors.rs  database.rs  mod.rs  redis.rs
src/constants/: app_constants.rs  error_messages.rs  mod.rs  order_status.rs  roles.rs
src/dtos/: address_dto.rs  api_response.rs  auth_dto.rs  cart_dto.rs  checkout_dto.rs  mod.rs  order_dto.rs  platform_settings_dto.rs  product_dto.rs  review_dto.rs  shipment_dto.rs  shipment_tracking_dto.rs  shipping_settings_dto.rs  user_dto.rs  vendor_dto.rs  wishlist_dto.rs
src/errors/: app_error.rs  error_codes.rs  error_response.rs  mod.rs
src/handlers/: mod.rs
src/middleware/: auth.rs  logging.rs  mod.rs  rate_limiter.rs  sanitization.rs  security_headers.rs  user_rate_limiter.rs
src/models/: address.rs  cart.rs  category.rs  mod.rs  order.rs  password_reset.rs  product.rs  product_image.rs  review.rs  user.rs  wishlist.rs
src/repositories/: address_repo.rs  cart_repo.rs  category_repo.rs  mod.rs  order_repo.rs  password_reset_repo.rs  product_repo.rs  review_repo.rs  user_repo.rs  wishlist_repo.rs
src/services/: address_service.rs  alert_service.rs  auth_service.rs  cart_service.rs  checkout_service  email_service.rs  inventory_service.rs  mod.rs  order_service.rs  order_service.rs.broken  payment_service.rs  product_service.rs  review_service.rs  shipment_tracking_service.rs  shipping_service.rs  trackingmore_api.rs  user_service.rs  vendor_service.rs
src/types/: common.rs
src/utils/: cache.rs  jwt.rs  logger.rs  mod.rs  pagination.rs  password.rs  response.rs  validators.rs
(+27 files in other folders)
